arreglo de ortografía

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <i class="fas fa-microscope fa-3x logodos"></i>
           <img src="imagenes/kreiman-prueba.png" alt="" width="156" height="100" class="logouno">
 
-          <a class="navbar-brand" href="index.html">Genetica Humana</a>
+          <a class="navbar-brand" href="index.html">Genética Humana</a>
           <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
