--- a/paginas/estudios.html
+++ b/paginas/estudios.html
@@ -31,7 +31,7 @@
         <div class="container-fluid">
           <i class="fas fa-microscope fa-3x logodos"></i>
           <img src="../imagenes/kreiman-prueba.png" alt="" width="156" height="100" class="logouno">
-          <a class="navbar-brand" href="#">Genetica Humana</a>
+          <a class="navbar-brand" href="#">Genética Humana</a>
           <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
             <!-- Artículo sobre citogenética clásica -->
             <article class="pruebo-box artuno">
               <h3 class="trans fs-3">
-                Citogenética clásica (Estudio Cromosómico):
+                Citogenética clásica
               </h3>
               <ul class="margin20 texto flex-items">
                 <li class="fs-4">Estudio citogenético (Cariotipo).</li>
