--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -31,7 +31,7 @@
         <div class="container-fluid">
           <i class="fas fa-microscope fa-3x logodos"></i>
           <img src="../imagenes/kreiman-prueba.png" alt="" width="156" height="100" class="logouno">
-          <a class="navbar-brand" href="#">Genetica Humana</a>
+          <a class="navbar-brand" href="#">Genética Humana</a>
           <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
