corrijo mediaquery para index

--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@
                   tanto la atención ambulatoria, así como el procesamiento de muestras remitidas desde otros
                   laboratorios.</p>
               </div>
+              <div class="labcolegas-mediaquery">
+                <img class="hover img-labcolegas" src="imagenes/lahtt.png" alt="laht">
+                <p class="fs-4 labcolegas-p">>>LAHT S.R.L. es un Laboratorio de Análisis Clínicos, Bacteriológicos y
+                  Hematológicos, especializado en Hemostasia y Trombosis, ubicado en la ciudad de Rosario, que abarca
+                  tanto la atención ambulatoria, así como el procesamiento de muestras remitidas desde otros
+                  laboratorios.
+                </p>
+                <img class="hover img-labcolegas" src="imagenes/tucumant.png" alt="tucuman">
+                <p class="fs-4 labcolegas-p">>>Laboratorio Tucumán es un laboratorio de diagnostico e investigación
+                  bioquímica que cumple con los requerimientos de los profesionales de la salud y de sus pacientes.
+                  Dando certezas en sus resultados, validados por los mejores profesionales y tecnología de punta.</p>
+                
+
+
+              </div>
 
             </section>
           </div>
