--- a/paginas/estudios.html
+++ b/paginas/estudios.html
@@ -47,7 +47,7 @@
                 <a class="nav-link hover fs-5" href="nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link hover fs-5" href="paginas/estudios.html">ESTUDIOS</a>
+                <a class="nav-link hover fs-5" href="estudios.html">ESTUDIOS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link hover fs-5" href="laboratorio.html">LABORATORIO</a>
